--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,13 @@
 </head>
 
 <body>
-    <h1>Aqui vamos a hacer un blog post </h1>
-    <p>Y este es un parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui vamos a hacer un blog post </h1>
+            <p>Y este es un parrafo de inicio /n Vamos a hablar de cosas inceibles
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
