Estructura inicial de la cabezera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 
 <body>
     <div id="container">
+        <div id="cabezera">
+            Cabezera
+        </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post </h1>
             <p>Y este es un parrafo de inicio /n Vamos a hablar de cosas inceibles
