--- a/blogpost.html
+++ b/blogpost.html
@@ -8,11 +8,13 @@
 <body>
     <div id="container">
         <div id="cabezera">
-            Cabezera
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>Aqui vamos a hacer un blog post </h1>
-            <p>Y este es un parrafo de inicio /n Vamos a hablar de cosas inceibles
+            <h1>Este es el titulo atractivo e interesante del post
+            </h1>
+            <p>Y este es un parrafo vamos a hablar de cosas inceibles a explicar las cosas iinceibles que se pueden hacer con las ramas
             </p>
         </div>
     </div>
