Agrergado el parrafo y cambiamos la tipografica

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,10 @@
     <div id="container">
         <div id="post">
             <h1>Aqui vamos a hacer un blog post </h1>
-            <p>Y este es un parrafo de inicio /n Vamos a hablar de cosas inceibles
+            <p>Y este es un parrafo de inicio /n Vamos a hablar de cosas inceibles de lo qu epueden ser las ramas en Git y GitHub
+            </p>
+            <p>
+                Los blogs son la mwejor forma de compoartir tus ideas Mucho mas que salir o de ver videos en youtube Exepto si eres un RockStart pero estadisticamente no lo eres..... Por Haora!!!
             </p>
         </div>
     </div>
