Agergre susbcricion cambie la cabezera y cambie color a azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="cabezera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de Maestro</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post </h1>
@@ -21,6 +21,7 @@
                 </h1>
                 <p>Y este es un parrafo vamos a hablar de cosas inceibles a explicar las cosas iinceibles que se pueden hacer con las ramas
                 </p>
+                <p>Suscribite y dale like</p>
         </div>
     </div>
 </body>
