Cambie el tirulo del bolgPost
Por que puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Titulo del post</title>
+    <title>Bienvenido a hyperBlog</title>
     <link rel="Stylesheet" href="css/estilos.css">
 </head>
 
