--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a hyperBlog</title>
+    <title>Bienvenido a hyperBlog:2.0</title>
     <link rel="Stylesheet" href="css/estilos.css">
 </head>
 
