--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Titulo del post</title>
+    <title>Tituló del post</title>
     <link rel="Stylesheet" href="css/estilos.css">
 </head>
 
@@ -22,6 +22,9 @@
                 <p>Y este es un parrafo vamos a hablar de cosas inceibles a explicar las cosas iinceibles que se pueden hacer con las ramas
                 </p>
                 <p>Suscribite y dale like</p>
+        </div>
+        <div id="fooder">
+            Echo con amor en Platzi
         </div>
     </div>
 </body>
