--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <p>Y este es un parrafo de inicio /n Vamos a hablar de cosas inceibles de lo qu epueden ser las ramas en Git y GitHub
             </p>
             <p>
-                Los blogs son la mwejor forma de compoartir tus ideas Mucho mas que salir o de ver videos en youtube Exepto si eres un RockStart pero estadisticamente no lo eres..... Por Haora!!!
+                Los blogs son la mejor forma de compartir tus ideas mucho mas que salir o de ver videos en youtube Exepto si eres un RockStart pero estadisticamente no lo eres..... Por Haora!!!
                 <h1>Este es el titulo atractivo e interesante del post
                 </h1>
                 <p>Y este es un parrafo vamos a hablar de cosas inceibles a explicar las cosas iinceibles que se pueden hacer con las ramas
