--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a hyperBlog:2.0</title>
+    <title>Bienvenido a hyperBlog:2.1</title>
     <link rel="Stylesheet" href="css/estilos.css">
 </head>
 
@@ -24,7 +24,7 @@
                 <p>Suscribite y dale like</p>
         </div>
         <div id="fooder">
-            Echo con amor en Platzi
+            Echo con amor en Platzi Claro que si
         </div>
     </div>
 </body>
